--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-BOT_NAME=example_random_bot
-COUNT=2
-REFER_ID=12345678
-DELAY_MIN = 10
-DELAY_MAX = 15
+BOT_NAME=NFYTGEN_HELP_BOT
+COUNT=20
+REFER_ID=https://t.me/NFYTGEN_BOT?start=12345
+DELAY_MIN = 20
+DELAY_MAX = 25
 AUTH=1
 RUN=1
